<?xml version="1.0" encoding="utf-8"?>
<layout>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/streetNameTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:boxCornerRadiusBottomEnd="@dimen/dp_10"
            app:boxCornerRadiusBottomStart="@dimen/dp_10"
            app:boxCornerRadiusTopEnd="@dimen/dp_10"
            app:boxCornerRadiusTopStart="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/streetNameTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street_no_name"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:baselineAligned="false"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/streetNameTextInputLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/buildingNoInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxCornerRadiusBottomEnd="@dimen/dp_10"
                app:boxCornerRadiusBottomStart="@dimen/dp_10"
                app:boxCornerRadiusTopEnd="@dimen/dp_10"
                app:boxCornerRadiusTopStart="@dimen/dp_10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/buildingNoTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/building_no"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/floorInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_weight="1"
                app:boxCornerRadiusBottomEnd="@dimen/dp_10"
                app:boxCornerRadiusBottomStart="@dimen/dp_10"
                app:boxCornerRadiusTopEnd="@dimen/dp_10"
                app:boxCornerRadiusTopStart="@dimen/dp_10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/floorTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/floor"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/apartmentInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxCornerRadiusBottomEnd="@dimen/dp_10"
                app:boxCornerRadiusBottomStart="@dimen/dp_10"
                app:boxCornerRadiusTopEnd="@dimen/dp_10"
                app:boxCornerRadiusTopStart="@dimen/dp_10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/apartmentInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Apartment"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="@dimen/dp_50"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
